tests/baselines/reference/parserX_ArrowFunction3.errors.txt
parserX_ArrowFunction3.ts(1,10): error TS2304: Cannot find name 'a'.
parserX_ArrowFunction3.ts(1,12): error TS1005: ',' expected.
parserX_ArrowFunction3.ts(1,14): error TS1005: ';' expected.


==== parserX_ArrowFunction3.ts (3 errors) ====
    var v = (a): => {
             ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS1005: ',' expected.
                 ~~
!!! error TS1005: ';' expected.
       
    };